test/Fail/Issue2788a.err
Issue2788a.agda:3.1-27: error: [NeedOptionCubical]
Option --cubical[={full,erased,no-glue}] required
when checking the pragma BUILTIN INTERVAL I
